AKU-822: Upload panel grows without scrolling - Further correction to fix Chrome+OSX scrollbar rendering bug

--- a/aikau/src/main/resources/alfresco/layout/css/StickyPanel.css
+++ b/aikau/src/main/resources/alfresco/layout/css/StickyPanel.css
@@ -1,6 +1,6 @@
 .alfresco-layout-StickyPanel {
    bottom: 0;
-   left: 50%;
+   left: 0;
    position: fixed;
    right: 0;
    &__panel {
@@ -10,7 +10,7 @@
       border-radius: @sticky-panel-border-radius;
       box-shadow: @sticky-panel-box-shadow;
       box-sizing: border-box;
-      left: -50%;
+      margin: 0 auto;
       position: relative;
    }
    &__title-bar {
@@ -44,9 +44,9 @@
       }
    }
    &__widgets {
+      max-height: @sticky-panel-max-height;
       overflow-x: hidden;
       overflow-y: auto;
-      max-height: @sticky-panel-max-height;
    }
    &--minimised {
       .alfresco-layout-StickyPanel {
@@ -71,7 +71,7 @@
          &__title-bar {
             &__close {
                cursor: default;
-               opacity: 0.3;
+               opacity: .3;
             }
          }
       }
